[gd_scene load_steps=13 format=4 uid="uid://ircfkyobbeiv"]

[ext_resource type="Script" path="res://Scripts/electrical/buttonlogic.gd" id="1_thuct"]
[ext_resource type="Texture2D" uid="uid://ddbfekpeprw36" path="res://Imports/Foozle_2DT0001_Science_Fiction_Lab_TilesetDecorTraps/Foozle_2DT0001_Science_Fiction_Labs_Tileset/Tileset/level_tileset.png" id="1_wyii8"]
[ext_resource type="PackedScene" uid="uid://p7m761aqol4n" path="res://Scenes/Levels/electrical/buttonmaze_utils/blue_door.tscn" id="3_h638h"]
[ext_resource type="PackedScene" uid="uid://8a67q5xtuvs0" path="res://Scenes/Levels/electrical/buttonmaze_utils/red_door.tscn" id="3_mohkd"]
[ext_resource type="PackedScene" uid="uid://c8r5c4dvf3ipb" path="res://Scenes/Levels/electrical/buttonmaze_utils/green_door.tscn" id="5_iy3ed"]
[ext_resource type="PackedScene" uid="uid://xsors4k2rgg7" path="res://Scenes/player.tscn" id="6_08ud1"]
[ext_resource type="PackedScene" uid="uid://7ieeuop6l48q" path="res://Scenes/Levels/electrical/buttonmaze_utils/red_button.tscn" id="6_87j3x"]
[ext_resource type="PackedScene" uid="uid://3di81jfd6h7r" path="res://Scenes/Levels/reactor/interact.tscn" id="7_dm6b2"]
[ext_resource type="PackedScene" uid="uid://dkhucln78dyvn" path="res://Scenes/Levels/electrical/buttonmaze_utils/blue_button.tscn" id="7_xg4ls"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fbt4i"]
texture = ExtResource("1_wyii8")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0

[sub_resource type="TileSet" id="TileSet_ykthc"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fbt4i")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vv5h"]
size = Vector2(2432, 384)

[node name="ElectricalBUTTONS" type="Node2D"]

[node name="buttonlogic" type="Node" parent="."]
script = ExtResource("1_thuct")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -2
texture_filter = 1
tile_map_data = PackedByteArray("AAD9/wAAAAACAAIAAAD9/wEAAAACAAIAAAD9/wIAAAACAAIAAAD9/wMAAAACAAIAAAD9/wQAAAACAAIAAAD9/wUAAAACAAIAAAD9/wYAAAACAAIAAAD9/wcAAAACAAIAAAD9/wgAAAACAAIAAAD9/wkAAAACAAIAAAD9/woAAAACAAIAAAD9/wsAAAABAAMAAAD+/wsAAAABAAMAAAD//wsAAAABAAMAAAAAAAsAAAABAAMAAAABAAsAAAABAAMAAAACAAsAAAABAAMAAAADAAsAAAABAAMAAAAEAAsAAAABAAMAAAAFAAsAAAABAAMAAAAGAAsAAAABAAMAAAAHAAsAAAABAAMAAAAIAAsAAAABAAMAAAAJAAsAAAABAAMAAAAKAAsAAAABAAMAAAALAAsAAAABAAMAAAAMAAsAAAABAAMAAAANAAsAAAABAAMAAAAOAAsAAAABAAMAAAAPAAsAAAABAAMAAAAQAAsAAAABAAMAAAARAAsAAAABAAMAAAASAAsAAAABAAMAAAATAAsAAAABAAMAAAAUAAsAAAABAAMAAAAVAAsAAAABAAMAAAAWAAsAAAABAAMAAAAXAAsAAAABAAMAAAAYAAsAAAABAAMAAAAZAAsAAAABAAMAAAAaAAsAAAABAAMAAAAbAAsAAAABAAMAAAAcAAsAAAABAAMAAAAdAAsAAAABAAMAAAAeAAsAAAABAAMAAAAfAAsAAAABAAMAAAAgAAsAAAABAAMAAAAhAAsAAAABAAMAAAAiAAsAAAABAAMAAAAjAAsAAAABAAMAAAAkAAsAAAABAAMAAAAlAAsAAAABAAMAAAAmAAsAAAABAAMAAAAnAAsAAAABAAMAAAAoAAsAAAABAAMAAAApAAsAAAABAAMAAAAqAAsAAAABAAMAAAArAAsAAAABAAMAAAArAAoAAAACAAIAAAArAAkAAAACAAIAAAArAAgAAAACAAIAAAArAAcAAAACAAIAAAArAAYAAAACAAIAAAArAAUAAAACAAIAAAArAAQAAAACAAIAAAArAAMAAAACAAIAAAArAAIAAAACAAIAAAD+/wAAAAABAAAAAAD//wAAAAABAAAAAAAAAAAAAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAABAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAABAAAAAAAIAAAAAAABAAAAAAAJAAAAAAABAAAAAAAKAAAAAAABAAAAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAANAAAAAAABAAAAAAAOAAAAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAARAAAAAAABAAAAAAASAAAAAAABAAAAAAATAAAAAAABAAAAAAAUAAAAAAABAAAAAAAVAAAAAAABAAAAAAAWAAAAAAABAAAAAAAXAAAAAAABAAAAAAAYAAAAAAABAAAAAAAZAAAAAAABAAAAAAAaAAAAAAABAAAAAAAbAAAAAAABAAAAAAAcAAAAAAABAAAAAAAdAAAAAAABAAAAAAAeAAAAAAABAAAAAAAfAAAAAAABAAAAAAAgAAAAAAABAAAAAAAhAAAAAAABAAAAAAAiAAAAAAABAAAAAAAjAAAAAAABAAAAAAAkAAAAAAABAAAAAAAlAAAAAAABAAAAAAAmAAAAAAABAAAAAAAnAAAAAAABAAAAAAAoAAAAAAABAAAAAAApAAAAAAABAAAAAAAqAAAAAAABAAAAAAArAAAAAAABAAAAAAArAAEAAAACAAIAAAD+/wEAAAACAAIAAAD//wEAAAACAAIAAAAAAAEAAAACAAIAAAAAAAIAAAACAAIAAAD//wIAAAACAAIAAAD+/wIAAAACAAIAAAD//wMAAAABAAIAAAD+/wMAAAACAAEAAAAAAAMAAAACAAIAAAABAAEAAAACAAIAAAABAAIAAAACAAIAAAABAAMAAAACAAIAAAACAAEAAAAGAAIAAAACAAIAAAACAAIAAAACAAMAAAACAAIAAAADAAEAAAACAAIAAAADAAIAAAACAAIAAAADAAMAAAACAAIAAAAEAAEAAAACAAIAAAAEAAIAAAACAAIAAAAEAAMAAAACAAEAAAAFAAEAAAACAAIAAAAFAAIAAAACAAEAAAAFAAMAAAACAAIAAAAGAAEAAAACAAIAAAAGAAIAAAACAAIAAAAGAAMAAAACAAIAAAAHAAEAAAACAAIAAAAHAAIAAAACAAIAAAAHAAMAAAABAAIAAAAIAAEAAAACAAIAAAAIAAIAAAACAAIAAAAIAAMAAAACAAIAAAAJAAEAAAACAAIAAAAJAAIAAAAGAAIAAAAJAAMAAAACAAIAAAAKAAEAAAACAAIAAAAKAAIAAAAGAAIAAAAKAAMAAAACAAIAAAALAAEAAAACAAIAAAALAAIAAAACAAIAAAALAAMAAAACAAIAAAAMAAEAAAACAAIAAAAMAAIAAAACAAIAAAAMAAMAAAACAAIAAAANAAEAAAACAAIAAAANAAIAAAACAAIAAAANAAMAAAACAAIAAAAOAAEAAAACAAIAAAAOAAIAAAACAAIAAAAOAAMAAAACAAIAAAAPAAEAAAACAAIAAAAPAAIAAAACAAIAAAAPAAMAAAACAAIAAAAQAAEAAAACAAIAAAAQAAIAAAACAAIAAAAQAAMAAAACAAIAAAARAAEAAAACAAIAAAARAAIAAAACAAEAAAARAAMAAAACAAIAAAASAAEAAAACAAIAAAASAAIAAAACAAIAAAASAAMAAAACAAIAAAATAAEAAAACAAIAAAATAAIAAAACAAIAAAATAAMAAAACAAIAAAAUAAEAAAACAAIAAAAUAAIAAAACAAIAAAAUAAMAAAACAAIAAAAVAAEAAAACAAIAAAAVAAIAAAACAAIAAAAVAAMAAAACAAIAAAAWAAEAAAACAAIAAAAWAAIAAAACAAIAAAAWAAMAAAACAAIAAAAXAAEAAAACAAIAAAAXAAIAAAAGAAIAAAAXAAMAAAACAAIAAAAYAAEAAAACAAIAAAAYAAIAAAACAAIAAAAYAAMAAAACAAIAAAAZAAEAAAACAAIAAAAZAAIAAAACAAIAAAAZAAMAAAACAAIAAAAaAAEAAAACAAIAAAAaAAIAAAACAAIAAAAaAAMAAAACAAIAAAAbAAEAAAACAAIAAAAbAAIAAAACAAIAAAAbAAMAAAACAAIAAAAcAAEAAAACAAIAAAAcAAIAAAACAAEAAAAcAAMAAAACAAIAAAAdAAEAAAACAAIAAAAdAAIAAAACAAIAAAAdAAMAAAACAAIAAAAeAAEAAAACAAIAAAAeAAIAAAACAAIAAAAeAAMAAAACAAIAAAAfAAEAAAACAAIAAAAfAAIAAAACAAIAAAAfAAMAAAAGAAIAAAAgAAEAAAACAAIAAAAgAAIAAAACAAIAAAAgAAMAAAACAAIAAAAhAAEAAAACAAIAAAAhAAIAAAACAAIAAAAhAAMAAAACAAIAAAAiAAEAAAACAAIAAAAiAAIAAAACAAIAAAAiAAMAAAACAAIAAAAjAAEAAAACAAIAAAAjAAIAAAACAAIAAAAjAAMAAAAGAAIAAAAkAAEAAAACAAIAAAAkAAIAAAACAAIAAAAkAAMAAAACAAIAAAAlAAEAAAACAAIAAAAlAAIAAAACAAEAAAAlAAMAAAACAAIAAAAmAAEAAAACAAIAAAAmAAIAAAACAAIAAAAmAAMAAAACAAIAAAAnAAEAAAACAAIAAAAnAAIAAAACAAIAAAAnAAMAAAACAAEAAAAoAAEAAAACAAIAAAAoAAIAAAACAAIAAAAoAAMAAAACAAIAAAApAAEAAAACAAIAAAApAAIAAAACAAIAAAApAAMAAAACAAIAAAAqAAEAAAACAAIAAAAqAAIAAAACAAIAAAAqAAMAAAACAAIAAAAoAAQAAAACAAIAAAAoAAUAAAACAAIAAAAoAAYAAAACAAIAAAApAAQAAAACAAIAAAApAAUAAAACAAIAAAApAAYAAAACAAIAAAAqAAQAAAACAAIAAAAqAAUAAAACAAIAAAAqAAYAAAACAAIAAAAoAAcAAAACAAIAAAAoAAgAAAACAAIAAAAoAAkAAAACAAIAAAApAAcAAAACAAIAAAApAAgAAAACAAIAAAApAAkAAAACAAIAAAAqAAcAAAACAAIAAAAqAAgAAAACAAIAAAAqAAkAAAACAAIAAAAlAAcAAAACAAIAAAAlAAgAAAAGAAIAAAAlAAkAAAACAAIAAAAmAAcAAAACAAIAAAAmAAgAAAACAAIAAAAmAAkAAAACAAIAAAAnAAcAAAACAAEAAAAnAAgAAAACAAIAAAAnAAkAAAACAAIAAAAiAAcAAAAGAAIAAAAiAAgAAAACAAIAAAAiAAkAAAACAAIAAAAjAAcAAAABAAIAAAAjAAgAAAAGAAIAAAAjAAkAAAACAAIAAAAkAAcAAAACAAIAAAAkAAgAAAACAAIAAAAkAAkAAAACAAIAAAAfAAcAAAACAAIAAAAfAAgAAAACAAIAAAAfAAkAAAACAAIAAAAgAAcAAAACAAIAAAAgAAgAAAACAAEAAAAgAAkAAAACAAIAAAAhAAcAAAACAAIAAAAhAAgAAAACAAIAAAAhAAkAAAACAAIAAAAcAAcAAAACAAIAAAAcAAgAAAACAAIAAAAcAAkAAAACAAIAAAAdAAcAAAACAAIAAAAdAAgAAAACAAIAAAAdAAkAAAAGAAIAAAAeAAcAAAACAAIAAAAeAAgAAAACAAIAAAAeAAkAAAACAAIAAAAZAAcAAAACAAIAAAAZAAgAAAACAAIAAAAZAAkAAAACAAIAAAAaAAcAAAACAAIAAAAaAAgAAAACAAIAAAAaAAkAAAACAAIAAAAbAAcAAAACAAIAAAAbAAgAAAACAAIAAAAbAAkAAAAGAAIAAAAWAAcAAAACAAIAAAAWAAgAAAACAAEAAAAWAAkAAAACAAIAAAAXAAcAAAACAAIAAAAXAAgAAAACAAIAAAAXAAkAAAACAAIAAAAYAAcAAAACAAIAAAAYAAgAAAACAAIAAAAYAAkAAAABAAIAAAATAAcAAAACAAIAAAATAAgAAAACAAEAAAATAAkAAAABAAIAAAAUAAcAAAACAAIAAAAUAAgAAAACAAIAAAAUAAkAAAACAAIAAAAVAAcAAAACAAIAAAAVAAgAAAACAAIAAAAVAAkAAAACAAIAAAAQAAcAAAACAAIAAAAQAAgAAAACAAIAAAAQAAkAAAACAAIAAAARAAcAAAACAAIAAAARAAgAAAACAAIAAAARAAkAAAACAAIAAAASAAcAAAACAAIAAAASAAgAAAACAAIAAAASAAkAAAACAAIAAAANAAcAAAACAAIAAAANAAgAAAACAAIAAAANAAkAAAACAAIAAAAOAAcAAAACAAIAAAAOAAgAAAACAAIAAAAOAAkAAAACAAIAAAAPAAcAAAACAAIAAAAPAAgAAAACAAIAAAAPAAkAAAACAAIAAAAKAAcAAAACAAIAAAAKAAgAAAACAAIAAAAKAAkAAAACAAIAAAALAAcAAAACAAIAAAALAAgAAAACAAEAAAALAAkAAAACAAIAAAAMAAcAAAACAAIAAAAMAAgAAAACAAIAAAAMAAkAAAACAAIAAAAHAAcAAAACAAIAAAAHAAgAAAACAAIAAAAHAAkAAAACAAIAAAAIAAcAAAACAAEAAAAIAAgAAAACAAIAAAAIAAkAAAACAAIAAAAJAAcAAAACAAIAAAAJAAgAAAABAAIAAAAJAAkAAAACAAIAAAAEAAcAAAACAAIAAAAEAAgAAAACAAIAAAAEAAkAAAACAAIAAAAFAAcAAAACAAIAAAAFAAgAAAACAAIAAAAFAAkAAAACAAEAAAAGAAcAAAACAAIAAAAGAAgAAAACAAIAAAAGAAkAAAACAAIAAAABAAcAAAACAAIAAAABAAgAAAACAAIAAAABAAkAAAACAAIAAAACAAcAAAACAAIAAAACAAgAAAACAAIAAAACAAkAAAACAAIAAAADAAcAAAACAAEAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAABAAQAAAAGAAIAAAABAAUAAAACAAIAAAABAAYAAAACAAIAAAACAAQAAAACAAIAAAACAAUAAAACAAIAAAACAAYAAAACAAIAAAADAAQAAAACAAIAAAADAAUAAAACAAIAAAADAAYAAAACAAIAAAD+/wcAAAACAAIAAAD+/wgAAAACAAEAAAD+/wkAAAACAAIAAAD//wcAAAACAAIAAAD//wgAAAACAAIAAAD//wkAAAACAAIAAAAAAAcAAAACAAIAAAAAAAgAAAACAAIAAAAAAAkAAAACAAIAAAD+/wQAAAACAAIAAAD+/wUAAAACAAIAAAD+/wYAAAACAAIAAAD//wQAAAACAAEAAAD//wUAAAACAAIAAAD//wYAAAACAAIAAAAAAAQAAAACAAIAAAAAAAUAAAACAAIAAAAAAAYAAAABAAIAAAAEAAQAAAACAAIAAAAEAAUAAAACAAIAAAAEAAYAAAACAAIAAAAFAAQAAAACAAIAAAAFAAUAAAACAAIAAAAFAAYAAAACAAIAAAAGAAQAAAACAAIAAAAGAAUAAAACAAIAAAAGAAYAAAACAAIAAAAHAAQAAAACAAIAAAAHAAUAAAACAAIAAAAHAAYAAAACAAIAAAAIAAQAAAACAAIAAAAIAAUAAAACAAIAAAAIAAYAAAACAAIAAAAJAAQAAAACAAIAAAAJAAUAAAACAAEAAAAJAAYAAAACAAIAAAAKAAQAAAACAAIAAAAKAAUAAAACAAIAAAAKAAYAAAACAAIAAAALAAQAAAACAAIAAAALAAUAAAACAAIAAAALAAYAAAACAAIAAAAMAAQAAAACAAIAAAAMAAUAAAACAAIAAAAMAAYAAAACAAIAAAANAAQAAAACAAIAAAANAAUAAAACAAEAAAANAAYAAAACAAIAAAAOAAQAAAABAAIAAAAOAAUAAAACAAIAAAAOAAYAAAACAAIAAAAPAAQAAAACAAIAAAAPAAUAAAACAAIAAAAPAAYAAAACAAEAAAAQAAQAAAACAAIAAAAQAAUAAAACAAIAAAAQAAYAAAACAAIAAAARAAQAAAACAAIAAAARAAUAAAACAAIAAAARAAYAAAACAAIAAAASAAQAAAACAAIAAAASAAUAAAACAAIAAAASAAYAAAACAAIAAAATAAQAAAACAAIAAAATAAUAAAACAAIAAAATAAYAAAACAAIAAAAUAAQAAAACAAIAAAAUAAUAAAACAAIAAAAUAAYAAAACAAIAAAAVAAQAAAABAAIAAAAVAAUAAAACAAIAAAAVAAYAAAACAAIAAAAWAAQAAAACAAIAAAAWAAUAAAACAAIAAAAWAAYAAAACAAIAAAAXAAQAAAACAAIAAAAXAAUAAAACAAIAAAAXAAYAAAACAAIAAAAYAAQAAAACAAEAAAAYAAUAAAACAAIAAAAYAAYAAAACAAIAAAAZAAQAAAACAAIAAAAZAAUAAAACAAIAAAAZAAYAAAACAAIAAAAaAAQAAAACAAIAAAAaAAUAAAACAAIAAAAaAAYAAAAGAAIAAAAbAAQAAAACAAEAAAAbAAUAAAACAAIAAAAbAAYAAAACAAIAAAAcAAQAAAACAAIAAAAcAAUAAAABAAIAAAAcAAYAAAAGAAIAAAAdAAQAAAACAAIAAAAdAAUAAAACAAIAAAAdAAYAAAACAAIAAAAeAAQAAAACAAIAAAAeAAUAAAACAAIAAAAeAAYAAAACAAIAAAAfAAQAAAACAAIAAAAfAAUAAAACAAIAAAAfAAYAAAACAAIAAAAgAAQAAAACAAIAAAAgAAUAAAACAAIAAAAgAAYAAAACAAIAAAAhAAQAAAACAAIAAAAhAAUAAAACAAEAAAAhAAYAAAACAAIAAAAiAAQAAAACAAIAAAAiAAUAAAACAAIAAAAiAAYAAAACAAIAAAAjAAQAAAACAAIAAAAjAAUAAAACAAIAAAAjAAYAAAACAAIAAAAkAAQAAAABAAIAAAAkAAUAAAACAAIAAAAkAAYAAAACAAIAAAAlAAQAAAACAAIAAAAlAAUAAAACAAIAAAAlAAYAAAACAAIAAAAmAAQAAAACAAIAAAAmAAUAAAACAAIAAAAmAAYAAAACAAIAAAAnAAQAAAACAAIAAAAnAAUAAAACAAIAAAAnAAYAAAACAAIAAAAoAAoAAAACAAIAAAApAAoAAAACAAIAAAAqAAoAAAACAAIAAAAlAAoAAAACAAIAAAAmAAoAAAACAAIAAAAnAAoAAAACAAIAAAAiAAoAAAACAAIAAAAjAAoAAAACAAIAAAAkAAoAAAACAAIAAAAfAAoAAAACAAIAAAAgAAoAAAACAAIAAAAhAAoAAAACAAIAAAAcAAoAAAACAAIAAAAdAAoAAAACAAIAAAAeAAoAAAACAAIAAAAZAAoAAAACAAIAAAAaAAoAAAACAAIAAAAbAAoAAAACAAIAAAAWAAoAAAACAAIAAAAXAAoAAAACAAIAAAAYAAoAAAACAAIAAAATAAoAAAACAAIAAAAUAAoAAAACAAIAAAAVAAoAAAACAAIAAAAQAAoAAAACAAIAAAARAAoAAAACAAIAAAASAAoAAAACAAIAAAAKAAoAAAACAAIAAAALAAoAAAACAAEAAAAMAAoAAAACAAIAAAANAAoAAAACAAIAAAAOAAoAAAACAAIAAAAPAAoAAAACAAIAAAAHAAoAAAACAAIAAAAIAAoAAAACAAIAAAAJAAoAAAACAAIAAAAEAAoAAAACAAIAAAAFAAoAAAACAAIAAAAGAAoAAAACAAIAAAABAAoAAAACAAIAAAACAAoAAAABAAIAAAADAAoAAAACAAIAAAD+/woAAAACAAIAAAD//woAAAACAAIAAAAAAAoAAAACAAIAAAD8/wsAAAABAAMAAAD7/wsAAAABAAMAAAD6/wsAAAABAAMAAAD5/wsAAAABAAMAAAD4/wsAAAABAAMAAAD3/wsAAAABAAMAAAD2/wsAAAAAAAMAAAD2/woAAAAAAAIAAAD2/wkAAAAAAAIAAAD2/wgAAAAAAAIAAAD2/wcAAAAAAAIAAAD2/wYAAAAAAAIAAAD2/wUAAAAAAAIAAAD2/wQAAAAAAAIAAAD2/wMAAAAAAAIAAAD2/wIAAAAAAAIAAAD2/wEAAAAAAAIAAAD2/wAAAAAAAAIAAAA1AAAAAAABAAAAAAA1AAEAAAACAAIAAAA1AAIAAAACAAIAAAA1AAMAAAACAAIAAAA1AAQAAAACAAIAAAA1AAUAAAACAAIAAAA1AAYAAAABAAIAAAA1AAcAAAACAAEAAAA1AAgAAAACAAIAAAA1AAkAAAABAAIAAAA1AAoAAAACAAEAAAD3/wYAAAACAAIAAAD3/wcAAAACAAIAAAD3/wgAAAACAAIAAAD3/wkAAAACAAIAAAD3/woAAAACAAIAAAD4/wYAAAACAAIAAAD4/wcAAAAGAAIAAAD4/wgAAAACAAIAAAD4/wkAAAACAAIAAAD4/woAAAACAAIAAAD5/wYAAAACAAIAAAD5/wcAAAACAAIAAAD5/wgAAAABAAIAAAD5/wkAAAACAAEAAAD5/woAAAACAAIAAAD6/wYAAAACAAIAAAD6/wcAAAACAAIAAAD6/wgAAAACAAIAAAD6/wkAAAACAAIAAAD6/woAAAACAAIAAAD7/wYAAAACAAIAAAD7/wcAAAACAAIAAAD7/wgAAAACAAIAAAD7/wkAAAAGAAIAAAD7/woAAAACAAIAAAD8/wYAAAAGAAIAAAD8/wcAAAACAAIAAAD8/wgAAAACAAIAAAD8/wkAAAACAAIAAAD8/woAAAACAAIAAAD3/wEAAAACAAIAAAD3/wIAAAACAAIAAAD3/wMAAAACAAIAAAD3/wQAAAACAAIAAAD3/wUAAAACAAIAAAD4/wEAAAACAAIAAAD4/wIAAAAGAAIAAAD4/wMAAAACAAIAAAD4/wQAAAACAAIAAAD4/wUAAAACAAIAAAD5/wEAAAACAAIAAAD5/wIAAAACAAIAAAD5/wMAAAABAAIAAAD5/wQAAAACAAEAAAD5/wUAAAACAAIAAAD6/wEAAAACAAIAAAD6/wIAAAACAAIAAAD6/wMAAAACAAIAAAD6/wQAAAACAAIAAAD6/wUAAAACAAIAAAD7/wEAAAACAAIAAAD7/wIAAAACAAIAAAD7/wMAAAACAAIAAAD7/wQAAAAGAAIAAAD7/wUAAAACAAIAAAD8/wEAAAAGAAIAAAD8/wIAAAACAAIAAAD8/wMAAAACAAIAAAD8/wQAAAACAAIAAAD8/wUAAAACAAIAAAD3/wAAAAACAAIAAAD4/wAAAAACAAIAAAD5/wAAAAACAAIAAAD6/wAAAAACAAIAAAD7/wAAAAACAAIAAAD8/wAAAAACAAIAAAAvAAAAAAABAAAAAAAwAAAAAAABAAAAAAAxAAAAAAABAAAAAAAyAAAAAAABAAAAAAAyAAEAAAACAAIAAAAyAAIAAAACAAIAAAAzAAAAAAABAAAAAAAzAAEAAAACAAIAAAAzAAIAAAACAAIAAAA0AAAAAAABAAAAAAA0AAEAAAACAAIAAAA0AAIAAAACAAIAAAAyAAMAAAACAAIAAAAyAAQAAAACAAIAAAAyAAUAAAACAAIAAAAzAAMAAAACAAIAAAAzAAQAAAACAAIAAAAzAAUAAAACAAIAAAA0AAMAAAACAAIAAAA0AAQAAAACAAIAAAA0AAUAAAACAAIAAAAyAAYAAAACAAIAAAAyAAcAAAACAAIAAAAyAAgAAAACAAIAAAAzAAYAAAACAAIAAAAzAAcAAAACAAIAAAAzAAgAAAACAAIAAAA0AAYAAAACAAEAAAA0AAcAAAACAAIAAAA0AAgAAAACAAIAAAAyAAkAAAACAAEAAAAyAAoAAAACAAIAAAAyAAsAAAABAAMAAAAzAAkAAAACAAIAAAAzAAoAAAACAAIAAAAzAAsAAAABAAMAAAA0AAkAAAACAAEAAAA0AAoAAAACAAIAAAA0AAsAAAABAAMAAAAxAAgAAAACAAIAAAAxAAkAAAACAAIAAAAxAAoAAAACAAIAAAAuAAgAAAACAAIAAAAuAAkAAAACAAIAAAAuAAoAAAACAAIAAAAvAAgAAAACAAIAAAAvAAkAAAACAAEAAAAvAAoAAAACAAIAAAAwAAgAAAACAAIAAAAwAAkAAAABAAIAAAAwAAoAAAACAAEAAAAsAAgAAAACAAIAAAAsAAkAAAACAAEAAAAsAAoAAAACAAIAAAAtAAgAAAACAAIAAAAtAAkAAAABAAIAAAAtAAoAAAACAAEAAAAsAAUAAAACAAIAAAAsAAYAAAACAAEAAAAsAAcAAAACAAIAAAAtAAUAAAACAAIAAAAtAAYAAAABAAIAAAAtAAcAAAACAAEAAAAsAAsAAAABAAMAAAAtAAsAAAABAAMAAAAuAAsAAAABAAMAAAAvAAsAAAABAAMAAAAwAAsAAAABAAMAAAAxAAsAAAABAAMAAAA1AAsAAAABAAMAAAAuAAUAAAACAAIAAAAuAAYAAAACAAIAAAAuAAcAAAACAAIAAAAvAAUAAAACAAIAAAAvAAYAAAACAAIAAAAvAAcAAAACAAIAAAAwAAUAAAACAAIAAAAwAAYAAAACAAIAAAAwAAcAAAACAAIAAAAxAAUAAAACAAIAAAAxAAYAAAACAAIAAAAxAAcAAAACAAIAAAAvAAMAAAACAAIAAAAvAAQAAAACAAIAAAAwAAMAAAACAAIAAAAwAAQAAAACAAIAAAAxAAMAAAACAAIAAAAxAAQAAAACAAIAAAAvAAEAAAACAAIAAAAvAAIAAAACAAIAAAAwAAEAAAACAAIAAAAwAAIAAAACAAIAAAAxAAEAAAACAAIAAAAxAAIAAAACAAIAAAAsAAAAAAABAAAAAAAsAAEAAAACAAIAAAAsAAIAAAACAAIAAAAtAAAAAAABAAAAAAAtAAEAAAACAAIAAAAtAAIAAAACAAIAAAAuAAAAAAABAAAAAAAuAAEAAAACAAIAAAAuAAIAAAACAAIAAAAsAAMAAAACAAIAAAAsAAQAAAACAAIAAAAtAAMAAAACAAIAAAAtAAQAAAACAAIAAAAuAAMAAAACAAIAAAAuAAQAAAACAAIAAAA2AAAAAAABAAAAAAA2AAEAAAACAAIAAAA2AAIAAAACAAIAAAA2AAMAAAACAAIAAAA2AAQAAAACAAIAAAA2AAUAAAACAAIAAAA2AAYAAAACAAIAAAA2AAcAAAACAAIAAAA2AAgAAAACAAIAAAA2AAkAAAACAAIAAAA2AAoAAAACAAIAAAA2AAsAAAABAAMAAAA3AAAAAAACAAIAAAA3AAEAAAACAAIAAAA3AAIAAAACAAIAAAA3AAMAAAACAAIAAAA3AAQAAAACAAIAAAA3AAUAAAACAAIAAAA3AAYAAAACAAIAAAA3AAcAAAACAAIAAAA3AAgAAAACAAIAAAA3AAkAAAABAAIAAAA3AAoAAAACAAEAAAA3AAsAAAABAAMAAAA4AAAAAAACAAIAAAA4AAEAAAACAAIAAAA4AAIAAAACAAIAAAA4AAMAAAACAAIAAAA4AAQAAAACAAIAAAA4AAUAAAACAAIAAAA4AAYAAAACAAIAAAA4AAcAAAACAAIAAAA4AAgAAAACAAIAAAA4AAkAAAACAAIAAAA4AAoAAAACAAIAAAA4AAsAAAABAAMAAAA5AAAAAAACAAIAAAA5AAEAAAACAAIAAAA5AAIAAAACAAIAAAA5AAMAAAACAAIAAAA5AAQAAAACAAIAAAA5AAUAAAACAAIAAAA5AAYAAAACAAIAAAA5AAcAAAACAAIAAAA5AAgAAAACAAIAAAA5AAkAAAACAAEAAAA5AAoAAAACAAIAAAA5AAsAAAABAAMAAAA6AAAAAAACAAIAAAA6AAEAAAACAAIAAAA6AAIAAAACAAIAAAA6AAMAAAACAAIAAAA6AAQAAAABAAIAAAA6AAUAAAACAAEAAAA6AAYAAAACAAIAAAA6AAcAAAACAAEAAAA6AAgAAAACAAIAAAA6AAkAAAABAAIAAAA6AAoAAAACAAEAAAA6AAsAAAABAAMAAAA7AAAAAAACAAIAAAA7AAEAAAACAAIAAAA7AAIAAAACAAIAAAA7AAMAAAACAAIAAAA7AAQAAAACAAIAAAA7AAUAAAACAAIAAAA7AAYAAAACAAIAAAA7AAcAAAABAAIAAAA7AAgAAAACAAEAAAA7AAkAAAACAAIAAAA7AAoAAAABAAIAAAA7AAsAAAABAAMAAAA8AAAAAAACAAIAAAA8AAEAAAACAAIAAAA8AAIAAAACAAIAAAA8AAMAAAACAAIAAAA8AAQAAAABAAIAAAA8AAUAAAACAAEAAAA8AAYAAAACAAIAAAA8AAcAAAACAAIAAAA8AAgAAAACAAIAAAA8AAkAAAABAAIAAAA8AAoAAAACAAEAAAA8AAsAAAABAAMAAABBAAAAAAADAAEAAABBAAEAAAADAAEAAABBAAIAAAADAAEAAABBAAMAAAADAAEAAABBAAQAAAADAAEAAABBAAUAAAADAAEAAABBAAYAAAADAAEAAABBAAcAAAADAAEAAABBAAgAAAADAAEAAABBAAkAAAADAAEAAABBAAoAAAADAAEAAAA9AAsAAAABAAMAAAA+AAsAAAABAAMAAAA/AAsAAAABAAMAAABAAAsAAAABAAMAAABBAAsAAAADAAMAAAA9AAQAAAACAAIAAAA9AAUAAAACAAIAAAA9AAYAAAACAAIAAAA9AAcAAAACAAIAAAA9AAgAAAACAAIAAAA9AAkAAAACAAIAAAA9AAoAAAACAAIAAAA+AAQAAAACAAEAAAA+AAUAAAACAAIAAAA+AAYAAAACAAIAAAA+AAcAAAACAAIAAAA+AAgAAAACAAIAAAA+AAkAAAACAAEAAAA+AAoAAAACAAIAAAA/AAQAAAABAAIAAAA/AAUAAAACAAEAAAA/AAYAAAACAAIAAAA/AAcAAAACAAEAAAA/AAgAAAACAAIAAAA/AAkAAAABAAIAAAA/AAoAAAACAAEAAABAAAQAAAACAAIAAABAAAUAAAABAAIAAABAAAYAAAACAAIAAABAAAcAAAABAAIAAABAAAgAAAACAAEAAABAAAkAAAACAAIAAABAAAoAAAABAAIAAAA9AAAAAAACAAIAAAA9AAEAAAACAAIAAAA9AAIAAAACAAIAAAA9AAMAAAACAAIAAAA+AAAAAAACAAIAAAA+AAEAAAACAAIAAAA+AAIAAAACAAIAAAA+AAMAAAACAAIAAAA/AAAAAAACAAIAAAA/AAEAAAACAAIAAAA/AAIAAAACAAEAAAA/AAMAAAACAAIAAABAAAAAAAACAAEAAABAAAEAAAACAAIAAABAAAIAAAABAAIAAABAAAMAAAACAAEAAAA=")
tile_set = SubResource("TileSet_ykthc")
metadata/_edit_lock_ = true

[node name="Collisions" type="StaticBody2D" parent="TileMapLayer"]

[node name="Floor" type="CollisionShape2D" parent="TileMapLayer/Collisions"]
position = Vector2(896, 192)
shape = SubResource("RectangleShape2D_5vv5h")
debug_color = Color(0.207905, 0.640276, 0, 0.42)

[node name="Doors" type="Node" parent="."]

[node name="red_door_a" parent="Doors" instance=ExtResource("3_mohkd")]
position = Vector2(541, -1)

[node name="red_door_b" parent="Doors" instance=ExtResource("3_mohkd")]
position = Vector2(620, 1)

[node name="blue_door_a" parent="Doors" instance=ExtResource("3_h638h")]
position = Vector2(273, -3)

[node name="blue_door_b" parent="Doors" instance=ExtResource("3_h638h")]
position = Vector2(403, 1)

[node name="green_door_a" parent="Doors" instance=ExtResource("5_iy3ed")]
position = Vector2(752, -3)

[node name="green_door_b" parent="Doors" instance=ExtResource("5_iy3ed")]
position = Vector2(817, 0)

[node name="Buttons" type="Node" parent="."]

[node name="red_button" parent="Buttons" instance=ExtResource("6_87j3x")]
position = Vector2(485, -32)

[node name="blue_button" parent="Buttons" instance=ExtResource("7_xg4ls")]
position = Vector2(211, -31)

[node name="Player" parent="." instance=ExtResource("6_08ud1")]
position = Vector2(15, -19)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -50)
zoom = Vector2(1.5, 1.5)

[node name="Interact" parent="Player" instance=ExtResource("7_dm6b2")]
visible = false
position = Vector2(3, 75)
